finalized the calculator app

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </script>
   </head>
   <body>
+    <h1>Simple Calculator App</h1>
     <div class="main">
       <form name="form">
         <input class="textview" name="textview" />
@@ -39,7 +40,7 @@
             <input
               class="button"
               type="button"
-              style="background-color: grey;"
+              style="background-color: grey"
               value="C"
               onclick="clean()"
             />
@@ -48,7 +49,7 @@
             <input
               class="button"
               type="button"
-              style="background-color: grey;"
+              style="background-color: grey"
               value="<"
               onclick="back()"
             />
@@ -153,5 +154,6 @@
         </tr>
       </table>
     </div>
+    <p>&copy; 2024 PDW Kariyawasam. All rights reserved.</p>
   </body>
 </html>
